[package]
name = "lemonade"
version = "0.1.0"
authors = ["Glitch <smallglitch@cryptolab.net>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
image = { version = "0.23", default-features = false, features = [ "png" ] }
ines-parser = { path = "../ines-parser" }
